[package]
name = "simple-carbon-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Utilities
thiserror = "2.0.16"

# Config
dotenvy = "0.15.7"

# Carbon framework dependencies
carbon-core = "0.9.1" # Core Carbon framework
carbon-rpc-program-subscribe-datasource = "0.9.1" # For SPL Token program monitoring

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"